k8s/base/web-bff/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-bff
spec:
  selector:
    app: web-bff
  ports:
    - port: 8000
      targetPort: 8000
